--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-web": "~0.13.12",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.1",
     "tailwind-rn": "^3.0.1"
   },
   "devDependencies": {
