--- a/package.json
+++ b/package.json
@@ -8,40 +8,57 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@dietime/react-native-date-picker": "^1.1.2",
     "@react-native-community/checkbox": "^0.5.8",
-    "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/native": "^5.9.4",
-    "@react-navigation/stack": "^5.14.5",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^6.0.5",
+    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/stack": "^6.0.7",
+    "dotenv": "^10.0.0",
     "expo": "~42.0.1",
     "expo-app-loading": "^1.1.2",
+    "expo-barcode-scanner": "~10.2.2",
     "expo-camera": "~11.2.2",
+    "expo-file-system": "^13.0.3",
     "expo-firebase-recaptcha": "^1.4.2",
     "expo-font": "~9.2.1",
-    "expo-image-picker": "~10.2.2",
+    "expo-image-picker": "^10.2.3",
+    "expo-linear-gradient": "^10.0.3",
+    "expo-permissions": "^12.1.1",
+    "expo-secure-store": "^11.0.3",
     "expo-status-bar": "~1.0.4",
     "firebase": "8.2.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-backdrop": "^2.1.2",
     "react-native-check-box": "^2.1.7",
+    "react-native-custom-qr-codes-expo": "^2.2.0",
+    "react-native-datefield": "^0.3.5",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-image-avatars": "^1.1.6",
     "react-native-otp-form": "^1.0.2",
+    "react-native-phone-number-input": "^2.1.0",
+    "react-native-qrcode-svg": "^6.1.1",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.4.0",
+    "react-native-screens": "^3.6.0",
+    "react-native-shadow-cards": "^1.0.2",
     "react-native-svg": "^12.1.1",
     "react-native-web": "~0.13.12",
     "react-native-webview": "11.6.2",
     "react-redux": "^7.2.4",
     "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0",
     "tailwind-rn": "^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@react-navigation/drawer": "^6.1.8",
     "autoprefixer": "^9",
     "postcss": "^7",
+    "react-native-paper": "^4.9.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   },
   "private": true
