--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-animatable": "^1.3.3",
     "react-native-backdrop": "^2.1.2",
     "react-native-check-box": "^2.1.7",
     "react-native-custom-qr-codes-expo": "^2.2.0",
