--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@dietime/react-native-date-picker": "^1.1.2",
     "@react-native-community/checkbox": "^0.5.8",
     "@react-native-community/datetimepicker": "^3.5.2",
-    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
@@ -20,13 +20,13 @@
     "expo-app-loading": "^1.1.2",
     "expo-barcode-scanner": "~10.2.2",
     "expo-camera": "~11.2.2",
-    "expo-file-system": "^13.0.3",
+    "expo-file-system": "~11.1.3",
     "expo-firebase-recaptcha": "^1.4.2",
     "expo-font": "~9.2.1",
     "expo-image-picker": "^10.2.3",
-    "expo-linear-gradient": "^10.0.3",
+    "expo-linear-gradient": "~9.2.0",
     "expo-permissions": "^12.1.1",
-    "expo-secure-store": "^11.0.3",
+    "expo-secure-store": "~10.2.0",
     "expo-status-bar": "~1.0.4",
     "firebase": "8.2.3",
     "react": "16.13.1",
@@ -46,7 +46,7 @@
     "react-native-qrcode-svg": "^6.1.1",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "^3.6.0",
+    "react-native-screens": "~3.4.0",
     "react-native-shadow-cards": "^1.0.2",
     "react-native-svg": "^12.1.1",
     "react-native-web": "~0.13.12",
